add required native changes

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Mastodon"
 include ':mastodon'
+
+includeBuild('../node_modules/react-native-gradle-plugin')
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
