--- a/mastodon/build.gradle
+++ b/mastodon/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'com.android.application'
 	id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+	id 'com.facebook.react'
 }
 
 android {
@@ -84,6 +85,8 @@ dependencies {
 	implementation 'org.parceler:parceler-api:1.1.12'
 	annotationProcessor 'org.parceler:parceler:1.1.12'
 	coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
+	implementation 'com.facebook.react:react-android'
+	implementation 'com.facebook.react:hermes-android'
 
 	def appCenterSdkVersion = "4.4.2"
 	appcenterPrivateBetaImplementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
@@ -96,3 +99,4 @@ dependencies {
 	androidTestImplementation 'androidx.test:runner:1.5.2'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
