--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 		mavenCentral()
 	}
 	dependencies {
-		classpath "com.android.tools.build:gradle:7.4.2"
+		classpath "com.android.tools.build:gradle"
 		classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.1"
 		classpath "com.facebook.react:react-native-gradle-plugin"
 		// NOTE: Do not place your application dependencies here; they belong
