--- a/mastodon/build.gradle
+++ b/mastodon/build.gradle
@@ -5,7 +5,8 @@ plugins {
 }
 
 android {
-	compileSdk 33
+	namespace "org.joinmastodon.android"
+	compileSdk 34
 	defaultConfig {
 		applicationId "org.joinmastodon.android"
 		minSdk 23
@@ -69,7 +70,7 @@ android {
 
 dependencies {
 	api 'androidx.annotation:annotation:1.3.0'
-	implementation 'com.squareup.okhttp3:okhttp:3.14.9'
+	implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 	implementation 'me.grishka.litex:recyclerview:1.2.1.1'
 	implementation 'me.grishka.litex:swiperefreshlayout:1.1.0.1'
 	implementation 'me.grishka.litex:browser:1.4.0'
@@ -107,4 +108,6 @@ configurations {
 	all*.exclude group: 'androidx.swiperefreshlayout', module: 'swiperefreshlayout'
 }
 
-apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+react {
+	autolinkLibrariesWithApp()
+}
