--- a/mastodon/build.gradle
+++ b/mastodon/build.gradle
@@ -11,6 +11,7 @@ android {
 		applicationId "org.joinmastodon.android"
 		minSdk 24
 		targetSdk 34
+		ndkVersion = "26.1.10909125"
 		versionCode 61
 		versionName "2.0.1"
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -41,6 +42,7 @@ android {
 		}
 		githubDebug{
 			initWith debug
+			matchingFallbacks = ['debug']
 		}
 	}
 	compileOptions {
@@ -66,6 +68,8 @@ android {
 		checkReleaseBuilds false
 		abortOnError false
 	}
+	ndkVersion '26.1.10909125'
+	buildToolsVersion '35.0.0'
 }
 
 dependencies {
